功能：支持市场热门与最新排序
